# DjangOps

./: .bandit  .codecov.yml  .commitlintrc  .coveragerc  .cspell.json  .dockerignore  .editorconfig  .flake8  .gitattributes  .gitignore  .hadolint.yaml  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  .pytest.ini  .ruff.toml  .snyk  Dockerfile  LICENSE  Makefile  README.md  compose.Makefile  compose.develop.yaml  compose.prod.yaml  compose.testing.yaml  compose.yaml  docker-compose.yml  manage.py  pyproject.toml  tox.ini
.envs/: .env.example  database.env.example  django.env.example  gunicorno.env.example  postgres.env.example
.github/: dependabot.yml  settings.yaml
.github/actions/setup-python-ci/: action.yaml
.github/workflows/: ci.yaml  lint.yaml  test.yaml
config/: Dockerfile  asgi.py  enums.py  settings.py  urls.py  utils.py  wsgi.py
config/settings/: base.py  dev.py  develop.py  prod.py  production.py  staging.py  testing.py
config/settings/common/: base.py  database.py
config/settings/environment/: database.py  django.py
db/: local-admin.yaml  secrets.yaml  storage.yaml
db/config/: connection-params.yaml
db/postgres/: pg_service.conf
db/secrets/: db_host.txt.sample  db_name.txt.sample  db_password.txt.sample  db_user.txt.sample
docker/: docker-compose.yaml
docker/commands/: _help_text.txt  bash_into_db.sh  bash_into_web.sh  clean_and_restart.sh  remove_dangling_images.sh
docker/compose/fragments/: watch-spec.yaml
docker/secrets/: secret_key.txt.sample
requirements/: base.in  base.txt  ci.in  ci.txt  constraints.txt  dev-tools.txt  dev.in  dev.txt  pip-tools.in  pip-tools.txt  pip.txt  prod.in  prod.txt  quality.in  quality.txt  requirements.txt  test-ci.in  test-ci.txt  test.in  test.txt  uv.in  uv.txt
src/: Dockerfile  gunicorn.conf.py  manage.py
src/config/: asgi.py  constants.py  enums.py  urls.py  utils.py
src/config/settings/: develop.py  production.py  staging.py  testing.py
src/config/settings/common/: __init__.py  database.py
src/config/settings/environment/: __init__.py  database.py  django.py
test_utils/: __init__.py
tests/config/: test_utils.py
